Fix to sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -397,9 +397,9 @@ figure.carousel-slide {
     }
 
     .carousel-container {
-        min-height: 550px; 
+        min-height: 250px;
+        max-height: 350px;
         width: 100%;
-        box-sizing: border-box;
         padding-left: 1rem;
         padding-right: 1rem;
     }
